Updated for all new changes to general bug finding and for using the com project DB. #8